<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchFragment">

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/empty_fragment"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/refresh_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_videos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_load"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="5dp"
        android:layout_gravity="bottom"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/pb_loading"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/main_color"/>

                    <TextView
                        android:id="@+id/tv_video_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/video_loading"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/progress"
                    android:textSize="18sp"
                    android:gravity="end|center_vertical"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/start_search" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>